Fix text overflow

--- a/app/components/common/molecules/BookInfoCard/BookInfoCard.css
+++ b/app/components/common/molecules/BookInfoCard/BookInfoCard.css
@@ -7,6 +7,11 @@
   background-color: #FEFEFE;
   border-radius: 1.5rem;
   padding: 5%;
+
+  overflow: hidden;
+  min-width: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .book-cover-container {
@@ -25,7 +30,11 @@
   padding: 5% 0 5% 5%;
   display: flex;
   flex-direction: column;
-  /* background-color: red; */
+
+  overflow: hidden;
+  min-width: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .book-title {
@@ -33,16 +42,31 @@
   /* font-size: 1.5rem; */
   font-weight: bold;
   color: #00ABAB;
+
+  overflow: hidden;
+  min-width: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .book-authors {
   /* font-size: 1.25rem; */
   font-weight: bold;
   color: #111111;
+
+  overflow: hidden;
+  min-width: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .book-sub-info {
   /* font-size: 1.25rem; */
   font-weight: 600;
   color: #999999;
+
+  overflow: hidden;
+  min-width: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
